vlib/v/checker/tests/invalid_recursive_struct_err.vv
struct Node {
mut:
	next ?Node
}
